Corrigi posição do botão COMPRAR inserindo quebra de linha com o <BR>

--- a/quinzena4/bugfixes/index.css
+++ b/quinzena4/bugfixes/index.css
@@ -44,6 +44,7 @@ div img {
     border-radius: 5px;
     font-size: 20px;
     color: white;
+    
 }
 
 .botao-amarelo:hover {
@@ -51,8 +52,9 @@ div img {
 }
 
 .container {
-    height: 500px;
+    height: 400px;
     text-align: center;
+       
 }
 
 .icone {
@@ -73,16 +75,20 @@ div img {
 
 #container-de-descricao>ol {
     padding: 15px 0px;
+    
 }
 
 #container-para-comprar {
     background-color: #e7eb90;
+    
+    
 }
 
 #container-para-comprar>p {
     color: #c44f00;
-    padding: 100px 0;
-    font-size: 60px;
+    padding: 100px 0px;
+    font-size: 60px;    
+    
 }
 
 
