--- a/quinzena4/bugfixes/index.css
+++ b/quinzena4/bugfixes/index.css
@@ -71,10 +71,13 @@ div img {
 #container-de-descricao {
     background-color: #2274a5;
     color: white;
+    padding-top: 100px;
 }
 
 #container-de-descricao>ol {
     padding: 15px 0px;
+    width: 400px;
+    margin: auto;
     
 }
 
