--- a/quinzena4/bugfixes/index.css
+++ b/quinzena4/bugfixes/index.css
@@ -72,6 +72,7 @@ div img {
     background-color: #2274a5;
     color: white;
     padding-top: 100px;
+    font-family:sans-serif;
 }
 
 #container-de-descricao>ol {
@@ -138,3 +139,4 @@ td button {
 #back-button:hover {
     background-color: #635a3d
 }
+
