Desafios implementados com hover e active na classe icone

--- a/quinzena4/bugfixes/index.css
+++ b/quinzena4/bugfixes/index.css
@@ -114,7 +114,9 @@ input{
     border-left: transparent;
 }
     
-    
+h2{
+    font-family:sans-serif;  
+}    
     
 
 .class-align{
@@ -159,15 +161,21 @@ td button:active{
 }
 
 .icone{ 
-    /* background-image: src="img/teste.png"; 16px x 16px */
+    
     background-color: transparent; /* make the button transparent */
     background-repeat: no-repeat;  /* make the background image appear only once */
     background-position: 0px 0px;  /* equivalent to 'top left' */
     border: none;           /* assuming we don't want any borders */
-    cursor: pointer;        /* make the cursor like hovering over an <a> element */
     height: 30px;           /* make this the size of your image */
-    padding-left: 16px;     /* make text start to the right of the image */
-    vertical-align: middle; /*align the text vertically centered*/
+    
+}
+
+.icone:hover{
+    opacity: 0.5;
+}
+
+.icone:active{
+    opacity: 100;
 }
 
 
